@@ -8,26 +8,28 @@ AUX stressapptest-1.0.6-misc-fixes.patch 3222 SHA256 2ccb7115b10b79b19edb2502fb0
 AUX stressapptest-1.0.6-pthread-test.patch 4289 SHA256 5004c9710ce2199f114ab73d8b682f84b8f626b911446974db75e322c23c35bd SHA512 15c58715cf6c7bc3738425f2e6f2bc8d3e9211a848f7aa4134a6f0b4fb97ad3c459a4d0315f0c4a29b6c4b42f442d700c867e7408a728d34df39dd6175b94e20 WHIRLPOOL 54744f6251e84a848314054620d65417460ab7759459d113ec14dde10f727a1598417b00f5dee212e6efac6f7cf8217b1c8d0b7c8bedf5964883dd5367191b4c
 DIST stressapptest-1.0.4_autoconf.tar.gz 200370 SHA256 c8c83419e800504682506e10800763759f3f339b2158bae1329bb145ff981b65 SHA512 bcc81057361c9ae09562106398f1a3d6b5a0a41e4bf4e7b61ca8f05144a4295e642136dd5441ad1950b5c2785476593ad30d03052e4fe9e9f4071aabd33b123f WHIRLPOOL fe8befb6f76c33c4b2d525064c47e3b9c69a1352b6a0eb502c06ca3b12143aa7a3127e9b944ab1c871937345978ddc6598f1dbe2f3fb7cd3dc6dd65b4563b537
 DIST stressapptest-1.0.6_autoconf.tar.gz 208918 SHA256 31b04bbd964431668977a89aee44b241cb54a5e84c3abf6132507545b286cdd9 SHA512 92a1258cc67f49de55f3cc1fa4e3fa627ed77aa033790f8af2b5d006799ff1aeef5b8e35dbeb52c777f9b4dad08ab6e4dfe445bc05e977c0f7c4a15c0cf46331 WHIRLPOOL 7e916e74e87ef935894c134ea867a077bc761b1959c3b2063b6b5ee5b2bae473d56a7e19423eb8d6c0be0a4f6dab29bad7c20eb5f2d68cee66210a6da2306921
+DIST stressapptest-1.0.7_p1.tar.xz 165876 SHA256 39183d4dd79ae37e7ad480a4b9254ff52bcc926e853e954df492b51db3ee3b04 SHA512 ac3c072eae6f13ba6608d2cee1ee33b5d27b078dbbcb9e7ae1e59507d4571e36a06dd0e19e4a1b705c916104e06be39aa93ebe607fe93d5669e8764c68904fc9 WHIRLPOOL 374a8c86dc2742187c001580ec335b72822f0ac44ba2694bdabf6991765126fedca8928862db56c827f24e9e11c5f7f8b6654d0e04a94ba5a4a284f608f28bf1
 EBUILD stressapptest-1.0.4.ebuild 867 SHA256 ae047f0a2310a349912e6b4c633553b1441eef64d3420f33fa3169690a95d4cc SHA512 2254adef9eb897014ae4cbdcb3c2a73d18bcc00de0592d6d21b2e68d8cab4a2d97677954b6b7fc1c5c8695d63b5a4ab76ad0657b3fc43f5f86c9cefa282395d6 WHIRLPOOL 22199a5df878dc2fd51f828adc0fe5d11ed1a1fe8cb1da5fa83d8e344f971c12f5379e9db612722169d9b1ccb8772616266dc8da3bd9a80bbcebed30c205a844
 EBUILD stressapptest-1.0.6-r1.ebuild 825 SHA256 efded6f54d5787cda09e49efe4fe2ff74e1a2c08164db230909a05f9cad6f451 SHA512 80830027494ecfd8faf800ee6062b919e208c9a8d360bab9de035014ceb9c8525318b42cb2407cf46bca86e566827977fd8e198022cb8474939642832a9256b4 WHIRLPOOL 748eb9e10037d1e04c6bf6d4c33234f5e1f8bb4e0e3318e7471776c9dca98ea10b6bee1cf396c2f4995beae759aea6f581c3b27a3fffc6b43ba0c145ffbc89ed
 EBUILD stressapptest-1.0.6-r2.ebuild 871 SHA256 af15babaf6321475b9df0966d0421f8cacd931f411f1e8cd85b0a23bbf431930 SHA512 564aa988ce7a18132a4f677fd20aaeae7da45bffb5b0780c62fac12564cab131b49e125dd28848f7c09455d858ca285722ea85cb75ab26b0e69c147bef01c7d2 WHIRLPOOL 588c4a05a920afa92d6ef2c82bd0000863e85d7089fc4c08ceb5b45760848eda5b54a00039a321a259105473ca18c63d9a6647ce52caacdd1915f43d90dd5ef1
 EBUILD stressapptest-1.0.6.ebuild 808 SHA256 f1a0bc635dc2713672c7560634d5c42207524d7e81666fb3982dafc10e5a458f SHA512 9dabe23d03ad14487ecff898ab28f96ae5ec314e9a5f24bb85e1b6800fa98136effd7b9cb59a7878666f129c07f0610dacbdda86aa7ca149fd95e6dd18a72025 WHIRLPOOL fe948b0cf7241f3d43b7e194abaff4c8ee00bc2981a82f2c638aef1b6fe54975489ed8a21055f9c446f74d55f2f0dd487dfce95a0e68ae6658f36dca12f830c2
-MISC ChangeLog 1656 SHA256 b8a520445e05f75cf810425ca87001cbd559454c6801c17292968859a97614a6 SHA512 b4c46270ac0617c39622f58ad95c8892f058677a6496953b9fe11e70e9de0c6089e1b731c39b9bc995d80db1c9d67e3724a5f32367aef643170914ae58571478 WHIRLPOOL e07fcd728718092cf3c94fe6eff378d40adbdd9cde42bb7275bfa9c18943e2a5c12b0e1120423897a30cdb90d8886585164c94b2407eb5cc3b192ee7c8669fd5
+EBUILD stressapptest-1.0.7_p1.ebuild 818 SHA256 130972046eb2bf156023d53d9df4690e5a51beb20bd9cff9668e0e729d49a01d SHA512 d5e03f59a40c2156b9cec9b940e60f1a7801abc6308927eb042b3fc620923d5a87853b33d1c7c5b42cd61fe82965302de54ad6f2ee16ee4a90ef48224ffa4236 WHIRLPOOL dc01bb8fb2b1fcbe76bf5e3339562b977a253fa2d841066e3b8aafc64ded77d217ca1266ef2377d74db5c4a4ce3abb02f6e6df98dd67932505e5a1fc1eed828b
+MISC ChangeLog 1818 SHA256 94ea0dc32dcae3b47e0a59c3f0c055d66aff93323b998764a37913ce833c61fa SHA512 dc455c44d01202338a47c0be8e4847d5785a0f1a4a72e80ccd291392de93206755c1a4e8d98de43adb48d764c4225e60780ccf07620a90e097afde13395aebbf WHIRLPOOL a814f5305eb651a443c7bbdeecc7a57a9c9d6acb7f6ce41909622a415242e52e161c2677552d06d321ccdca3c6f0fb20f97e33f9696dd4d2c51b23b83db38e08
 MISC metadata.xml 240 SHA256 060d4d570194ff567e10d66246f85d4b9fee1efb17d111aeb9f03345f6e20efd SHA512 41a5c4b9e67d814937a0524714617a059c1351a00ac12d9344373f43b41d074e24fab5598e44c8a22f1848bfa12b8fc76cd5674ca62cd1f917b3235c77721971 WHIRLPOOL da0b560d9528cfe4fcff409de2d9749cf9ae8b7a04468b42463e8097b89e152a67a0da0ea7e6db1186f852687979c2e843e487a5eb76e663717148a796aa093d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJT34p/AAoJEPGu1DbS6WIA2AIP/A5rr9tJ+QE83gv52EAUd406
-u+X09xxOZutahOPweQTBHqQZ69EtVhhdp+3EkKx7pMxBFlYiN6p6wJmHIctse1+f
-Z6ckT1mxtHaPeIgijwO/CV9PA/RqODaaDB9ou3E5z5Yk7BKw+ZntzpAvWXuMfnzB
-bapcEEHyW2g67ZP3YO0UsYHUjb+CA8DU9OmfMvdW0z1xmZIqWmQ9ZbOy4ZPtxKH/
-ftwUMWOMtgyH5FwUuynqS4p3OFH2Zt16a+cdOgD6+wwA+SGEsVJi4uB/5SolY4IW
-ckPrBHjoOMTgfYTLI+TFMa5n1lOjbkBYlL3FUX919U3KazkfrmXeeu697QX13Ujo
-YGV1oIIFaReRUbt/bcDE+KuQyAh/SyT/wlGjx0JbXKgSrhSp0MJZ/Rur1KpV0y8T
-i5dreMMjt8OcoDTB2zigAzD5YWel5/a2tUqIuyzH6nL2IIImlkwy/uD6tJLs7NSW
-OXkqtKWDLDt//MYjqVy8um57IehBpOq6BHPSvKu1JsG1JB1y3WPvNut6/LFqAV2V
-L5cie6ZgnKSPqC6eamsMZYAXDw8U0pOP3NENJCiXamgAvHmooTPomb/VkHP5sFWv
-tTSCVDkCG63fXX/G3Vw6/xoCvdfbn9PfSXu+M5tyWMim7mHQRKZ6XihdhXr9B6il
-kuSGC6nYFrXyUhjCoH+M
-=9GL4
+iQIcBAEBCAAGBQJT4EATAAoJEPGu1DbS6WIAcSQQAJa25/Qf3rj8TvZPxJ3nlTMt
+FMZUxZkVxBtDiArDnwxgt751gEiGijHsT1LTddnEUIE7EUei/dlAgAHB88r/1W1L
+5hvMTxUm7lS+XRXNcok+7hWL4hb3Pe+GSZEd7S5Qq+reT2v/RXkS/QcqFFkbQNLZ
+HPcYBs4EPbFZB8efOadAMa8a5NwRRV38v6tRF9KjC3TxZ/PG3zj5aXXV1zWk72OB
+MDxfDFWn4Rh/aGuRwqgfp7W+Z46/8skjkG3ad9ZZ+rgECSm6d8OArZVrdLUOp51o
+FS12SeAzNMNC3TzOVPtxDNG0DDeSJKXadWneTfBAISlEJ71QnWFQu7/GrzKYzIP7
+VVa2b5QlAWsOszgtGeRbahfRJ9Q15Lkfn0ZxHI9MDQd8SpIAEdAcZKxKjq0kU2WZ
+fbMQrObu8QLRPuWam8w7qrkSEXeL36w8o3hFq//Mn+5aiJRFf3otDdFOuaMGROZK
+mEGQ3CYuYaABxHYN/aVks2XVWRCxEjwC0gNbNQiqj8sjzgnaKvlRxscpwqfgZkzX
+u0E5c5e9UtBF28vOpc2cWh2yqcxAPUdns/0aOH/tQMMA3bZxmDIjmw7lcuAvugLT
+5pzakSynQT21rowlVS2/pOkwuPB7cqemRcNAue5teVd4cItTf/jVVtZBLhjkXKK/
+MHC3aN1duMiJOhharJI6
+=dF32
 -----END PGP SIGNATURE-----
