@@ -1,0 +1,13 @@
+DEFINED_PHASES=configure
+DEPEND=dev-libs/libaio
+DESCRIPTION=Stressful Application Test
+EAPI=4
+HOMEPAGE=http://code.google.com/p/stressapptest/
+IUSE=debug
+KEYWORDS=~amd64 ~arm ~mips ~x86
+LICENSE=Apache-2.0
+RDEPEND=dev-libs/libaio
+SLOT=0
+SRC_URI=mirror://gentoo/stressapptest-1.0.7_p1.tar.xz
+_eclasses_=eutils	06133990e861be0fe60c2b428fd025d9	flag-o-matic	9836bc51856bcaffac53c9cd4b59a8be	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0f1760274637a138b99bb649202ea402
+_md5_=d4e8b9e6d432d15ac731510bb29ff109
